--- a/style.css
+++ b/style.css
@@ -147,9 +147,6 @@ a:hover{
 .experience{
 	width: 384px;
 	margin: 0 auto;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
 	border-top: 1px solid #000;
 }
 
@@ -157,6 +154,7 @@ a:hover{
 	display: flex;
 	align-items: center;
 	padding-top: 28px;
+	justify-content: center;
 }
 
 .dot::before{
